fix(settings): prevent cog from causing horizontal overflow

--- a/spot-client/src/css/views.css
+++ b/spot-client/src/css/views.css
@@ -43,9 +43,10 @@
 }
 
 .settings_cog {
-    top: 41px;
-    position: absolute;
+    position: fixed;
     right: 32px;
+    top: 41px;
+
 }
 
 .subcontent {
